[OpenNeuro] Recorded changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.1.2 2025-12-10
+  - Included doi to data descriptor paper
 1.1.1 2025-10-20
   - changed title: high quality -> comprehensive
 1.1.0 2025-10-20
